--- a/src/Components/TodoLoading/TodoLoading.css
+++ b/src/Components/TodoLoading/TodoLoading.css
@@ -1,7 +1,7 @@
 .loading_container{
     display: flex;
     justify-content: center;
-    margin: 15px 0;
+    margin-top: 15px;
 }
 
 .skeleton_loader{
